--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
     <header>
-        <img src="./images/perfil.jpg" alt="Foto de perfil Nicolás Nocete" class="profile-thumbnail">
+        <img src="./images/imagen.jpg" alt="Foto de perfil Martin tornavacio" class="profile-thumbnail">
 
         <div class="profile-name">
-            <h3>Nicolas Nocete</h3>
-            <h4><a href="https://www.linkedin.com/in/nicol%C3%A1s-nocete-aa9277103/"  target="_blank">Linkedin</a></h4>
-            <h4><a href="https://github.com/NicolasNocete"  target="_blank">GitHub</a></h4>            
+            <h4><a href="https://www.linkedin.com/in/martin-gabriel-tornavacio-87925a220/"  target="_blank">Linkedin</a></h4>
+            <h4><a href="https://github.com/martin-t22"  target="_blank">GitHub</a></h4>            
         </div>
         <div class="unraf">
             <a href="https://www.unraf.edu.ar/" target="_blank"><img src="https://www.unraf.edu.ar/images/logos/UNRaf_03.png" alt="logo UNRAF" class="logo-unraf"></a>
@@ -22,30 +21,31 @@
     <main>
         <div>
             <h1>¡Bienvenidos a todos!</h1>
-            <p>Esta es una página de ejemplo para que los alumnos de Programación 1 del 2020, de la <b>Licenciatura de Producción de Videojuegos y Entretenimiento Digital</b> puedan conocernos mas.</p>
+            <p>Esta es una página para que sepan un poco sobre mi personalidad y profesionalidad, ya que, es un ejecicio practico de la <b>Licenciatura de Producción de Videojuegos y Entretenimiento Digital</b> puedan conocernos mas.</p>
             <p>Además, servirá para que puedan ver aplicados los contenidos de HTML y CSS.</p>
             <br>
             <h3>Un poco de mí</h3>
-            <p>Soy Técnico en Electrónica e Ingeniero en computación. En Octubre 2019 obtuve el titulo mas importante, el de papá.</p>
-            <p>La docencia siempre fue un área de mi interes, desde pequeño recuerdo estar al servicio de los demás.</p>
-            <p>Soy un aficionado de la tecnología. Siempre me atrajo entender e interactuar en el mundo virtual.</p>
-            <p>Hace mas de 7 años trabajo para un empresa de desarrollo de software, donde realizamos aplicaciones para la industria.</p> 
-            <br>
-            <p>En el día a día trabajo con lenguajes de programación variados:</p>
+            <p>Tengo 23 años, soy de Sunchales (una ciudad cerca de Rafaela). Soy tecnico electromecanico, en 2018 consegui el titulo, en la Escuela Profesional Tecnico N° 279 de Sunchales.  </p>
+            <p>Actualmente estudio Diseño Industrial, estoy en el cuarto año, elegi hacer esta materia como optativa, para seguir potenciando mis conocimintos de programacion.</p>
+            <p>Soy una persona introvertida, no me van escuchar hablar mucho, pero cuando tengo que dar mi opinion lo hare sin problemas.</p>
+            <p>En mis tiempos libres, aprovecho a ver o jugar futbol y me encanta juntarme con familia y amigos.</p> 
+            <br>Siempre que pueda trato de leer algun libro o mirar documentales, ya que me gusta seguir adquiriendo conocimientos.
+
+            <p> Trabajo con programas de diseño variados:</p>
             <ul>
-                <li>JS+HTML5+CSS3</li>
-                <li>Python</li>
-                <li>Delphi</li>
-                <li>Ladder</li>
+                <li>Onshape</li>
+                <li>Keyshot</li>
+                <li>Power Point</li>
+                <li>Canva</li>
             </ul>
             <br>
-            <p>Mis gustos musicales cambian con los años, pero voy a intentar enumerar mi Top 5:</p>
+            <p>Mis gustos musicales son variados, me gusta casi todo, pero lo que mas escucho son los siguentes 5:</p>
             <ol>
-                <li>La Renga</li>
-                <li>Pink Floyd</li>
-                <li>Divididos</li>
-                <li>EL FLACO SPINETTA, en todas sus versiones.</li>
-                <li>Magdalena Fleitas (si, cuando sos papá tus gustas mutan mucho!)</li>
+                <li>Queen</li>
+                <li>Bon Jovi</li>
+                <li>Daddy Yankee</li>
+                <li>No te va gustar.</li>
+                <li>Paulo Londra</li>
             </ol>
 
             <br>
